# motif

./: Cargo.toml  test.py
example/: Cargo.toml  pyproject.toml
example/src/: main.rs
motif-example/: Cargo.toml
motif-example/.env/: pyvenv.cfg
motif-example/maturin_starter/: main.py
motif-example/src/: lib.rs
src/: drive.rs  lib.rs  pwm.rs  rate_limiter.rs
src/control/: mod.rs  pwm.rs
src/control/induction/: mod.rs  vhz.rs
src/induction/: mod.rs  vhz.rs
src/model/: mod.rs  sensor.rs
